# phenotypes

./: Cargo.toml  README.md
src/: lib.rs  model.rs  observation.rs  simple.rs
