[package]
name = "phenotypes"
version = "0.1.2-dev0"
description = "Common types and traits for modeling clinical information"
keywords = ["phenomics", "bioinformatics", "HPO", "phenopackets"]
edition = "2024"

homepage = "https://github.com/P2GX/phenotypes"
repository = "https://github.com/P2GX/phenotypes"
readme = "README.md"
license-file = "LICENSE"

authors = ["Daniel Danis <daniel.gordon.danis@protonmail.com>"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
ontolius = { version = "0.5.2", default-features = false }
